Fixes imageViewer style issue on Android 2.3

--- a/orange/css/jquery.imageViewer.css
+++ b/orange/css/jquery.imageViewer.css
@@ -100,3 +100,14 @@ body.modal-open #imageViewerContainer .contentContainer{
 #largeImg {
   width: 100%;
 }
+
+.modal-open.overflowFix {
+  overflow: auto;
+  position: static;
+}
+.modal-open.overflowFix #imageViewerContainer {
+  position: static;
+  height: auto;
+  width: auto;
+}
+
