--- a/orange/css/jquery.imageViewer.css
+++ b/orange/css/jquery.imageViewer.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 #imageViewerContainer {
   position: fixed;
   left: 0;
@@ -33,18 +37,27 @@
   color: #bc001f;
   vertical-align: middle;
   background:#bc001f url(../images/aa.jpg) no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
   height:100%;
   padding-top:50%;
   font-weight: 700;
   padding:0 20px;
 }
 
+#viewerText.win {
+  position: relative;
+}
+
 #viewerText.win .gongxi{
   display: block;
-  padding-top:60%;
   width: 160px;
   margin: 0 auto;
+
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  margin-left: -80px;
+  margin-top: -30px;
 }
 
 #imageViewerContainer .contentContainer.tableLayer #viewerText{ 
@@ -104,10 +117,15 @@ body.modal-open #imageViewerContainer .contentContainer{
 .modal-open.overflowFix {
   overflow: auto;
   position: static;
+  height: 100%;
 }
 .modal-open.overflowFix #imageViewerContainer {
   position: static;
-  height: auto;
+  /*height: auto;*/
   width: auto;
+  min-height: 100%;
 }
 
+.modal-open.overflowFix #imageViewerContainer.image {
+  height: auto;
+}
